tests/spec/compile-pass/008_default_read_access.zn
// category: compile-pass
// stage: mvp
// milestone: M4
// profile: freestanding
// purpose: default non-Copy parameter access does not move ownership

module tests.pass.defaultReadAccess;

struct Handle {
    id: U32,
}

impl Handle {
    destroy {}
}

fn inspect(handle: Handle) -> U32 {
    return handle.id;
}

fn consume(move handle: Handle) {}

fn main() {
    val handle = Handle { id: 7 };
    val id = inspect(handle);
    consume(move handle);
}
